exercies rest and minor fixes
