# swagger.json
@@ -21,6 +21,36 @@
         }
       }
     },
+    "/auth/github": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/github/callback": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/exercises/": {
       "get": {
         "tags": [
@@ -41,6 +71,9 @@
           "exercises"
         ],
         "description": "",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -54,8 +87,8 @@
                 "description": {
                   "example": "any"
                 },
-                "duration": {
-                  "example": 1
+                "duartion": {
+                  "example": "any"
                 },
                 "date": {
                   "example": "any"
@@ -65,11 +98,17 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "201": {
+            "description": "Created"
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -94,8 +133,8 @@
                 "description": {
                   "example": "any"
                 },
-                "duration": {
-                  "example": 1
+                "duartion": {
+                  "example": "any"
                 },
                 "date": {
                   "example": "any"
@@ -113,6 +152,9 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -143,6 +185,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -165,6 +210,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -598,38 +646,6 @@
         "description": "",
         "produces": [
           "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "sleep_date": {
-                  "example": "any"
-                },
-                "bedtime": {
-                  "example": "any"
-                },
-                "wakeup_time": {
-                  "example": "any"
-                },
-                "total_sleep_hours": {
-                  "example": "any"
-                },
-                "sleep_quality": {
-                  "example": "any"
-                },
-                "dreams_recorded": {
-                  "example": "any"
-                },
-                "notes": {
-                  "example": "any"
-                }
-              }
-            }
-          }
         ],
         "responses": {
           "401": {
